Fix flickering and arrows position

--- a/src/renderer/components/dock/dock.scss
+++ b/src/renderer/components/dock/dock.scss
@@ -60,6 +60,10 @@
 
   .tabs-wrapper {
     overflow: hidden;
+    width: 100%;
+    box-sizing: border-box;
+    position: relative;
+    padding: 0 $padding*2.5;
   }
 
   .tab-content {
@@ -83,7 +87,7 @@
 
   .tabs-control {
     overflow: auto;
-    position: relative;
+    width: 100%;
 
     &::-webkit-scrollbar {
       visibility: hidden;
@@ -100,20 +104,6 @@
     &:hover::-webkit-scrollbar-thumb {
       background: var(--scrollBarColor);
     }
-
-    .tab-control {
-      position: absolute;
-      z-index: 9999;
-    }
-
-    .scroll-left {
-      left: 0;
-    }
-
-    .right {
-      right: 0;
-    }
-
   }
 
   .DockTab.active {
@@ -123,4 +113,18 @@
       color: var(--terminalWhite);
     }
   }
+
+  .tab-control {
+    position: absolute;
+    z-index: 9999;
+  }
+
+  .scroll-left {
+    left: 0;
+  }
+
+  .scroll-right {
+    right: 0;
+  }
+
 }
